Back-end create&update Controller