@@ -2,7 +2,7 @@ package org.example.teammanager.controller.presentation.connexion;
 
 import org.example.teammanager.config.JwtTokenProvider;
 import org.example.teammanager.dto.JetonJwtResponse;
-import org.example.teammanager.dto.MessageErreurResponse;
+import org.example.teammanager.dto.contact.MessageErreurResponse;
 import org.example.teammanager.model.membre.Membre;
 import org.example.teammanager.model.membreRoleMembre.MembreRoleMembre;
 import org.example.teammanager.service.membre.MembreService;
@@ -52,43 +52,21 @@ public class ConnexionController {
     public ResponseEntity<?> login(@RequestBody Membre membre) {
         try {
             Membre membreEnregistre = membreService.findByEmail(membre.getEmail()).orElseThrow();
-
             if (!passwordEncoder.matches(membre.getPassword(), membreEnregistre.getPassword())) {
                 throw new BadCredentialsException("Identifiants incorrects");
             }
-
-            List<MembreRoleMembre> membreRoleMembres = membreRoleMembreService.findByIdMembre(membreEnregistre);
-
+            List<MembreRoleMembre> membreRoleMembres = membreRoleMembreService.findByMembreId(membreEnregistre);
             if (membreRoleMembres.isEmpty()) {
-                return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                        .body(new MessageErreurResponse("Rôle non trouvé pour ce membre"));
+                return ResponseEntity.status(HttpStatus.NOT_FOUND).body(new MessageErreurResponse("Rôle non trouvé pour ce membre"));
             }
-
-            // Si plusieurs rôles existent, prenez le premier (vous pouvez changer cette logique si nécessaire)
-            MembreRoleMembre membreRoleMembre = membreRoleMembres.get(0);
-
-            String nomRole = membreRoleMembre.getIdRoleMembre().getNomRole();
-
-            Authentication authentication = new UsernamePasswordAuthenticationToken(
-                    membre.getEmail(),
-                    membreEnregistre.getPassword(),
-                    List.of(new SimpleGrantedAuthority(nomRole))
-            );
-
+            MembreRoleMembre membreRoleMembre = membreRoleMembres.getFirst();
+            String nomRole = membreRoleMembre.getRoleMembre().getNomRole();
+            Authentication authentication = new UsernamePasswordAuthenticationToken(membre.getEmail(), membreEnregistre.getPassword(), List.of(new SimpleGrantedAuthority(nomRole)));
             SecurityContextHolder.getContext().setAuthentication(authentication);
-
             String jetonJwt = jwtTokenProvider.generateToken(membreRoleMembre);
-
-            return ResponseEntity.ok(new JetonJwtResponse(
-                    jetonJwt,
-                    membreEnregistre.getEmail(),
-                    authentication.getAuthorities().stream().findFirst().orElseThrow().getAuthority()
-            ));
-
+            return ResponseEntity.ok(new JetonJwtResponse(jetonJwt, membreEnregistre.getEmail(), authentication.getAuthorities().stream().findFirst().orElseThrow().getAuthority()));
         } catch (AuthenticationException e) {
-            String messageErreur = (e instanceof BadCredentialsException)
-                    ? "Email ou mot de passe incorrect"
-                    : "Erreur d'authentification";
+            String messageErreur = (e instanceof BadCredentialsException) ? "Email ou mot de passe incorrect" : "Erreur d'authentification";
             logger.error(messageErreur, e);
             return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(new MessageErreurResponse(messageErreur));
         } catch (Exception e) {
